--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sailor moon</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <main>
         <section>
             <div>
+                <h1>GATITOS</h1>
                 <img src="fotos/ga.gif" alt="">
                 <img src="fotos/gn.gif" alt="">
             </div>
