--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <div>
                 <h1>GATITOS</h1>
                 <img src="fotos/ga.gif" alt="">
+                <img src="fotos/gy.gif" alt="">
                 <img src="fotos/gn.gif" alt="">
+                <img src="fotos/michis.gif" alt="">
+                <img src="fotos/mimo.gif" alt="">
+                <img src="fotos/luna.gif" alt="">
             </div>
         </section>
     </main>
