--- a/editoriales.html
+++ b/editoriales.html
@@ -60,33 +60,25 @@
             </div>
         </nav>
         <main>
-            <h4 class="degrade">Te mostramos estas ofertas para que puedas aprovechar</h4>
-            <section class="galeria-flex">
-                <article>
-                    <h5>$700</h5>
-                    <img class="aum" src="imagen/oferta1.jpg">
-                </article>
-                <article>
-                    <h5>$500</h5>
-                    <img class="aum" src="imagen/oferta12.jpg">
-                </article>
-                <article>
-                    <h5>$600</h5>
-                    <img class="aum" src="imagen/oferta2.jpg">
-                </article>
-                <article>
-                    <h5>$500</h5>
-                    <img class="aum" src="imagen/oferta3.jpg">
-                </article>
-                <article>
-                    <h5>$600</h5>
-                    <img class="aum" src="imagen/oferta4.jpg">
-                </article>
-                <article>
-                    <h5>$700</h5>
-                    <img class="aum" src="imagen/oferta5.jpg">
-                </article>
-            </section>
+            <h4 class="degrade">ALGUNAS EDITORIALES</h4>
+            <p>Españolas
+            <p>
+            <p>Panini España</p>
+            <p>Norma</p>
+            <p>Ecc España</p>
+            <p>Malpaso</p>
+            <p>Planeta Comic</p>
+            <p>Milky Way</p>
+            <p>Españolas Varias</p>
+            <p>Argentinas</p>
+            <p>Panini Arg/Mex</p>
+            <p>Utopia</p>
+            <p>Popfiction/Deu</p>
+            <p>Merci</p>
+            <p>Ovni Press</p>
+            <p>Historieteca</p>
+            <p>Comic Ar</p>
+            <p>Nacionales Varias</p>
         </main>
         <footer class="footer-flex">
             <div>
@@ -116,4 +108,5 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
         </body>
+        
         </html>
