--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                                     Editoriales
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li>Españolas</a></li>
+                                    <li><a href="editoriales.html">Españolas</a></li>
                                     <hr>
-                                    <li>Argentinas</a></li>
-                                    </ul>
+                                    <li><a href="editoriales.html">Argentinas</a></li>
+                                </ul>
                                 </li>
                         </ul>
                         <form class="d-flex">
