--- a/productos.html
+++ b/productos.html
@@ -46,9 +46,9 @@
                                 Editoriales
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li>Españolas</a></li>
+                                <li><a href="editoriales.html">Españolas</a></li>
                                 <hr>
-                                <li>Argentinas</a></li>
+                                <li><a href="editoriales.html">Argentinas</a></li>
                             </ul>
                         </li>
                     </ul>
